Fix Bug 1069432 - Padding between syntax box and following h3 too small
Integrated styles for syntax from customCSS into the main files.
- Moved styles into individual 'component' files after talking to @darkwing and @openjck.
- Extracted colours into variables (made rgba values into hex to avoid contrast problems on dark background colours)
- Removed competing and redundant rules (do we really need to declare margin-top:0 specifically if there is no margin-top on the element?)

You will need to run compress assets to properly test this!

Some test pages:
https://developer.mozilla.org/en-US/docs/Web/API/Blob.Blob
https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise#Syntax
https://developer.mozilla.org/en-US/docs/Web/API/AudioBuffer

--- a/media/redesign/stylus/wiki-syntax.styl
+++ b/media/redesign/stylus/wiki-syntax.styl
@@ -5,38 +5,33 @@
 @import 'includes/vars';
 @import 'includes/mixins';
 
-code[class*='language-'], pre[class*='language-'] {
+code[class*='language-'],
+pre[class*='language-'] {
     color: inherit;
     text-shadow: none;
 }
 
 pre[class*='language-'] {
-    margin: 0 0 24px 0;
+    margin: 0 0 $grid-spacing 0;
 
     span.comment {
         display: inherit;
     }
 }
 
-.error pre[class*='language-'] {
-    margin: 10px 0 0 0;
-    background: none;
-}
-
-:not(pre)>code[class*='language-'], pre[class*='language-'] {
+:not(pre)>code[class*='language-'],
+pre[class*='language-'] {
     @extend $code-block;
 }
 
-/*
-    Some places in the wiki feature <pre><em><code>
-*/
+/* Some places in the wiki feature <pre><em><code> */
+
 pre em code[class*='language-'] {
-    background-image: none;
+    background: none transparent;
     border-left: 0;
-    background: transparent;
 }
 
-pre.twopartsyntaxbox, pre.syntaxbox {
-    background: rgba(212, 221, 228, 0.5) !important;
-    margin-bottom: 0;
-}
+/* components based on the above */
+
+@import 'wiki-syntax-syntaxbox';
+@import 'wiki-syntax-error';
